exports[`test should not render actions for non admin 1`] = `
<div
  className="page page-limited">
  <PageHeader
    total={2} />
  <UsersSearch
    onSearch={[Function]} />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    removeMember={[Function]} />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={2} />
</div>
`;

exports[`test should render actions for admin 1`] = `
<div
  className="page page-limited">
  <PageHeader
    loading={true}
    total={2}>
    <div
      className="page-actions">
      <div
        className="button-group">
        <AddMemberForm
          addMember={[Function]} />
      </div>
    </div>
  </PageHeader>
  <UsersSearch
    onSearch={[Function]} />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "canAdmin": true,
        "key": "foo",
        "name": "Foo",
      }
    }
    removeMember={[Function]} />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={false}
    total={2} />
</div>
`;
